--- a/openy.info.yml
+++ b/openy.info.yml
@@ -128,6 +128,8 @@ dependencies:
   - openy_calc
   - openy_data_wrapper
   - logger_entity
+  # YMCAli custom modules
+  - ymcali_master
 
 themes:
   - bartik
