--- a/modules/openy_features/openy_prgf/modules/openy_prgf_banner/config/install/core.entity_form_display.paragraph.banner.default.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_banner/config/install/core.entity_form_display.paragraph.banner.default.yml
@@ -3,6 +3,7 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.images_library
+    - field.field.paragraph.banner.field_prgf_color
     - field.field.paragraph.banner.field_prgf_description
     - field.field.paragraph.banner.field_prgf_headline
     - field.field.paragraph.banner.field_prgf_image
@@ -17,8 +18,13 @@ targetEntityType: paragraph
 bundle: banner
 mode: default
 content:
-  field_prgf_description:
+  field_prgf_color:
     weight: 1
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+  field_prgf_description:
+    weight: 2
     settings:
       rows: 5
       placeholder: ''
@@ -32,7 +38,7 @@ content:
     third_party_settings: {  }
     type: string_textfield
   field_prgf_image:
-    weight: 2
+    weight: 3
     settings:
       entity_browser: images_library
       field_widget_display: label
@@ -44,7 +50,7 @@ content:
     third_party_settings: {  }
     type: entity_browser_entity_reference
   field_prgf_link:
-    weight: 3
+    weight: 4
     settings:
       placeholder_url: ''
       placeholder_title: ''
