[YGH-502] Add simple YAML configuration. - Timezone support for Event start and end date. - Config factory injection to Saver service.

--- a/openy_facebook_sync.services.yml
+++ b/openy_facebook_sync.services.yml
@@ -37,6 +37,7 @@ services:
       - '@logger.channel.openy_facebook_sync'
       - '@entity.manager'
       - '@openy_mappings.event_repository'
+      - '@config.factory'
   logger.channel.openy_facebook_sync:
     parent: logger.channel_base
     arguments:
