--- a/openy_node_branch.info.yml
+++ b/openy_node_branch.info.yml
@@ -21,6 +21,7 @@ dependencies:
   - openy_latest_news
   - openy_location_core
   - openy_node
+  - openy_node_mbrshp
   - openy_prgf_1c
   - openy_prgf_2c
   - openy_prgf_3c
@@ -35,6 +36,7 @@ dependencies:
   - openy_prgf_small_banner
   - openy_prgf_whay
   - openy_svg_formatter
+  - openy_widgets
   - paragraphs
   - path
   - pathauto
