Changing the search box label to be available from the view, but accessibly hidden

--- a/modules/openy_features/openy_prgf/modules/openy_prgf_blog_listing/config/install/views.view.listing_blog_posts.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_blog_listing/config/install/views.view.listing_blog_posts.yml
@@ -402,7 +402,7 @@ display:
           exposed: true
           expose:
             operator_id: combine_op
-            label: ''
+            label: 'Search text'
             description: ''
             use_operator: false
             operator: combine_op
