--- a/modules/openy_features/openy_node/config/install/tour.tour.openy-node-add.yml
+++ b/modules/openy_features/openy_node/config/install/tour.tour.openy-node-add.yml
@@ -72,12 +72,20 @@ tips:
     weight: 8
     attributes:
       data-class: 'label:contains("Branch")'
+  camp:
+    id: camp
+    plugin: text
+    label: 'Camp Content'
+    body: 'Here user can add Camps. This content type is used for creation of Camp primary pages similar to Branches. Camp teasers also will appear in Location finder page. And you will be able to associate blogs with your camp.'
+    weight: 9
+    attributes:
+      data-class: 'label:contains("Camp")'
   facility:
     id: facility
     plugin: text
     label: 'Facility Content'
     body: 'Adding a facility is very similar to adding a branch the only differences are there is no coming soon and a facility can be grouped by the taxonomy term type.'
-    weight: 9
+    weight: 10
     attributes:
       data-class: 'label:contains("Facility")'
   membership:
@@ -85,7 +93,7 @@ tips:
     plugin: text
     label: 'Membership Content'
     body: 'Here a user can set up the different types of membership available for the site. This consist of a location for the membership, monthly fee and joining fee.'
-    weight: 10
+    weight: 11
     attributes:
       data-class: 'label:contains("Membership")'
   landing-page:
@@ -93,7 +101,7 @@ tips:
     plugin: text
     label: 'Landing Page'
     body: 'Here a user can add landing pages to the site these are jump off`s to other areas of the site. Landing pages are made up of paragraphs which will be explained in a later tour.'
-    weight: 11
+    weight: 12
     attributes:
       data-class: 'label:contains("Landing Page")'
   next-tutorial:
@@ -101,4 +109,4 @@ tips:
     plugin: text
     label: 'Next tutorial'
     body: '<a href="[site:url]node/add/landing_page?tour=1" class="button--primary button">Click here</a> to open next tutorial where you can learn how to add landing page.'
-    weight: 12
+    weight: 13
