--- a/ygh_content.info.yml
+++ b/ygh_content.info.yml
@@ -1,9 +1,9 @@
 name: YGH Content
 type: module
-description: Implements static migrations to add YMCA Houston content. Imports blog posts from WordPress export file.
+description: Implements static migrations to add YMCA Houston content. Imports blog posts from WordPress export file. Add blocks to regions.
 core: 8.x
 package: YGH
-version: 8.x-1.0
+version: 8.x-1.1
 dependencies:
   - openy:openy_migrate
   - migrate_source_csv:migrate_source_csv
