Theme restore css/legacy/bootstrap.min.css.

--- a/openy_lily/openy_lily.libraries.yml
+++ b/openy_lily/openy_lily.libraries.yml
@@ -1,6 +1,8 @@
 global-styling:
   version: VERSION
   css:
+    base:
+      css/legacy/bootstrap.min.css: {}
     theme:
       css/style.css: {}
   js:
