[YPTF-252]: render reports and send email.

--- a/docroot/modules/custom/yptf_kronos/yptf_kronos.services.yml
+++ b/docroot/modules/custom/yptf_kronos/yptf_kronos.services.yml
@@ -4,4 +4,4 @@ services:
     arguments: ['yptf_kronos_reports']
   yptf_kronos_reports.poc:
     class: Drupal\yptf_kronos\YptfKronosReportsPoc
-    arguments: ['@config.factory', '@mindbody_cache_proxy.client', '@logger.channel.yptf_kronos_reports']
+    arguments: ['@config.factory', '@mindbody_cache_proxy.client', '@logger.channel.yptf_kronos_reports',  '@plugin.manager.mail', '@renderer', '@language_manager']
