--- a/openy.info.yml
+++ b/openy.info.yml
@@ -120,6 +120,7 @@ dependencies:
   - openy_prgf_camp_menu
   # OpenY custom modules
   - openy_field_hours
+  - openy_hf
   - openy_hours_formatter
   - openy_migrate
   - openy_map
