--- a/docroot/modules/custom/yptf_kronos/yptf_kronos.services.yml
+++ b/docroot/modules/custom/yptf_kronos/yptf_kronos.services.yml
@@ -2,6 +2,6 @@ services:
   logger.channel.yptf_kronos_reports:
     parent: logger.channel_base
     arguments: ['yptf_kronos_reports']
-  yptf_kronos_reports.poc:
-    class: Drupal\yptf_kronos\YptfKronosReportsPoc
+  yptf_kronos_reports.generate:
+    class: Drupal\yptf_kronos\YptfKronosReports
     arguments: ['@config.factory', '@mindbody_cache_proxy.client', '@logger.channel.yptf_kronos_reports',  '@plugin.manager.mail', '@renderer', '@language_manager']
