--- a/config/install/core.entity_view_display.node.event.listing_teaser.yml
+++ b/config/install/core.entity_view_display.node.event.listing_teaser.yml
@@ -18,6 +18,7 @@ dependencies:
   module:
     - datetime
     - user
+    - ygh_paragraph
 id: node.event.listing_teaser
 targetEntityType: node
 bundle: event
@@ -31,8 +32,13 @@ content:
       timezone_override: ''
       date_format: 'F jS g:i a'
     third_party_settings: {  }
+  field_landing_body:
+    type: ygh_paragraph_preview_formatter
+    weight: 0
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
 hidden:
-  field_landing_body: true
   field_sidebar_content: true
   langcode: true
   links: true
