--- a/openy_node_event.info.yml
+++ b/openy_node_event.info.yml
@@ -29,6 +29,7 @@ dependencies:
   - openy_prgf_lto
   - openy_prgf_panorama
   - openy_prgf_simple_content
+  - openy_prgf_small_banner
   - paragraphs
   - path
   - rng
@@ -39,4 +40,5 @@ dependencies:
   - user
   - veoa
   - views
-version: 8.x-1.4
+  - ygh_paragraph
+version: 8.x-1.9
