Changes for class listing page, lots of theme changes plus change to view and teaser display mode for class node type

--- a/themes/openy_themes/openy_rose/openy_rose.libraries.yml
+++ b/themes/openy_themes/openy_rose/openy_rose.libraries.yml
@@ -67,3 +67,13 @@ color.preview:
     color/preview.js: {}
   dependencies:
     - color/drupal.color
+
+subcategory-search-form:
+  version: VERSION
+  js:
+    scripts/openy_rose_subcategory_classes.js: {}
+  dependencies:
+    - core/jquery
+    - core/jquery.once
+    - core/drupal
+    - core/drupalSettings
