--- a/modules/openy_features/openy_node/modules/openy_node_class/config/install/core.entity_view_display.node.class.teaser.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_class/config/install/core.entity_view_display.node.class.teaser.yml
@@ -3,14 +3,28 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
+    - field.field.node.class.field_class_activity
+    - field.field.node.class.field_class_description
+    - field.field.node.class.field_content
+    - field.field.node.class.field_sidebar_content
     - node.type.class
   module:
+    - text
     - user
 id: node.class.teaser
 targetEntityType: node
 bundle: class
 mode: teaser
 content:
-  links:
-    weight: 100
-hidden: {  }
+  field_class_description:
+    type: text_trimmed
+    weight: 0
+    label: hidden
+    settings:
+      trim_length: 150
+    third_party_settings: {  }
+hidden:
+  field_class_activity: true
+  field_content: true
+  field_sidebar_content: true
+  links: true
