--- a/modules/openy_features/openy_prgf/modules/openy_prgf_mbrshp_calc/openy_prgf_mbrshp_calc.info.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_mbrshp_calc/openy_prgf_mbrshp_calc.info.yml
@@ -9,6 +9,7 @@ dependencies:
   - image
   - media_entity
   - node
+  - openy_calc
   - openy_field_custom_hours
   - openy_hours_formatter
   - openy_loc_branch
