--- a/modules/openy_features/openy_prgf/modules/openy_prgf_mbrshp_calc/config/install/field.field.paragraph.openy_prgf_mbrshp_calc.field_prgf_block.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_mbrshp_calc/config/install/field.field.paragraph.openy_prgf_mbrshp_calc.field_prgf_block.yml
@@ -12,17 +12,17 @@ entity_type: paragraph
 bundle: openy_prgf_mbrshp_calc
 label: Block
 description: ''
-required: false
+required: true
 translatable: true
 default_value:
   -
-    plugin_id: calc_block
+    plugin_id: 'calc_block'
     plugin_configuration:
-      id: calc_block
+      id: 'calc_block'
       label: Block
       provider: null
       label_display: null
-    plugin_configuration_schema_id: block.settings.calc_block
+    plugin_configuration_schema_id: 'block.settings.calc_block'
 default_value_callback: ''
 settings: {  }
 field_type: 'plugin:block'
