--- a/openy_lily/openy_lily.info.yml
+++ b/openy_lily/openy_lily.info.yml
@@ -8,8 +8,11 @@ libraries:
   - openy_lily/global-styling
 regions:
   header: Header
+  logo: Logo
   primary_menu: 'Primary menu'
   secondary_menu: 'Secondary menu'
+  mobile_menu: Mobile menu
+  search: Search Form
   location_menu: 'Location menu'
   sidebar_menu: 'Sidebar menu'
   page_top: 'Page top'
