--- a/docroot/devops/reinstall/vars/environments/default_env.yml
+++ b/docroot/devops/reinstall/vars/environments/default_env.yml
@@ -37,8 +37,8 @@ env:
     # Configure synchroniation.
     - { name: 'php-eval', status: true, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_sync.settings')->set('active_syncers', ['personify_mindbody_sync.syncer_fast', 'ymca_google.syncer'])->save(TRUE);\"" }
     - { name: 'php-eval', status: true, arguments: "\"\\Drupal::configFactory()->getEditable('personify_mindbody_sync.settings')->set('is_production', '0')->save(TRUE);\"" }
-    - { name: 'php-eval', status: true, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_personify.settings')->set('customer_orders_endpoint', 'http://ygtctrain2.personifycloud.com/personifydataservices/PersonifyData.svc/CL_MindBodyCustomerOrder')->save(TRUE);\"" }
-    - { name: 'php-eval', status: true, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_personify.settings')->set('childcare_endpoint', 'http://ygtctrain2.personifycloud.com/PersonifyDataServices/PersonifyData.svc/CL_GetChildcarePayments')->save(TRUE);\"" }
+    - { name: 'php-eval', status: true, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_personify.settings')->set('customer_orders_endpoint', 'https://account.ymcamn.org/PersonifyDataServices/PersonifyData.svc/CL_MindBodyCustomerOrder')->save(TRUE);\"" }
+    - { name: 'php-eval', status: true, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_personify.settings')->set('childcare_endpoint', 'https://account.ymcamn.org/PersonifyDataServices/PersonifyData.svc/CL_GetChildcarePayments')->save(TRUE);\"" }
     - { name: 'php-eval', status: true, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_personify.settings')->set('customer_orders_username', 'ALEX.SCHEDROV')->save(TRUE);\"" }
     - { name: 'php-eval', status: true, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_personify.settings')->set('customer_orders_password', 'Helpdesk01')->save(TRUE);\"" }
     # Set calendar syncer to test mode.
