--- a/docroot/modules/custom/ymca_retention/config/install/ymca_retention.api.yml
+++ b/docroot/modules/custom/ymca_retention/config/install/ymca_retention.api.yml
@@ -1,3 +1,3 @@
-endpoint: 'http://ygtctrain2.personifycloud.com/PersonifyDataServices/PersonifyData.svc/'
+endpoint: 'https://***REMOVED***/PersonifyDataServices/PersonifyData.svc/'
 username: dmitry.drozdik
 password: ***REMOVED***
