--- a/docroot/sites/default/config/staging/ymca_personify.settings.yml
+++ b/docroot/sites/default/config/staging/ymca_personify.settings.yml
@@ -1,17 +1,17 @@
-wsdl: 'https://ygtcprod2.personifycloud.com/sso/webservice/service.asmx?WSDL'
+wsdl: 'https://***REMOVED***/SSO/webservice/service.asmx?wsdl'
 vendor_id: 8
 vendor_username: ClockWork
 vendor_password: ***REMOVED***
 vendor_block: ***REMOVED***
-url_login: 'http://ygtcprod2.personifycloud.com/PersonifyEBusiness/Default.aspx?TabID=337'
-url_account: 'http://ygtcprod2.personifycloud.com/personifyebusiness/MyY/tabid/61/Default.aspx'
-url_sign_out: 'https://ygtcprod2.personifycloud.com/personifyebusiness/MyY/tabid/61/ctl/Logoff/Default.aspx'
-url_cart: 'http://ygtcprod2.personifycloud.com/PersonifyEbusiness/YMCA/ShoppingCart.aspx'
-customer_orders_endpoint: 'http://ygtctrain2.personifycloud.com/personifydataservices/PersonifyData.svc/CL_MindBodyCustomerOrder'
+url_login: 'https://***REMOVED***/PersonifyEBusiness/Default.aspx?TabID=337'
+url_account: 'https://***REMOVED***/PersonifyEbusiness/MyY/tabid/61/Default.aspx'
+url_sign_out: 'https://***REMOVED***/PersonifyEbusiness/MyY/tabid/61/ctl/Logoff/Default.aspx'
+url_cart: 'https://***REMOVED***/PersonifyEbusiness/YMCA/ShoppingCart.aspx'
+customer_orders_endpoint: 'https://***REMOVED***/PersonifyDataServices/PersonifyData.svc/CL_MindBodyCustomerOrder'
 customer_orders_username: Alex.Schedrov
 customer_orders_password: A!ex!23
 childcare_authorization: 'Basic QWxleC5TY2hlZHJvdjpIZWxwZGVzazAx'
-childcare_endpoint: 'http://ygtctrain2.personifycloud.com/PersonifyDataServices/PersonifyData.svc/CL_GetChildcarePayments'
+childcare_endpoint: 'https://***REMOVED***/PersonifyDataServices/PersonifyData.svc/CL_GetChildcarePayments'
 childcare_pdf_address_line1: '2125 E. Hennepin Avenue, Suite 100'
 childcare_pdf_address_line2: 'Minneapolis, MN 55413-2720'
 childcare_pdf_tax_id: 45-2563299
