--- a/docroot/sites/default/config/staging/ymca_retention.api.yml
+++ b/docroot/sites/default/config/staging/ymca_retention.api.yml
@@ -1,3 +1,3 @@
-endpoint: 'http://ygtcprod2.personifycloud.com/PersonifyDataServices/Personifydata.svc/'
+endpoint: 'https://***REMOVED***/PersonifyDataServices/PersonifyData.svc/'
 username: dmitry.drozdik
 password: ***REMOVED***
