--- a/docroot/sites/ymca_redwing/config/staging/ymca_personify.settings.yml
+++ b/docroot/sites/ymca_redwing/config/staging/ymca_personify.settings.yml
@@ -1,12 +1,12 @@
-wsdl: 'https://ygtcprod2.personifycloud.com/sso/webservice/service.asmx?WSDL'
+wsdl: 'https://***REMOVED***/SSO/webservice/service.asmx?wsdl'
 vendor_id: 8
 vendor_username: ClockWork
 vendor_password: ***REMOVED***
 vendor_block: ***REMOVED***
-url_login: 'http://ygtcprod2.personifycloud.com/PersonifyEBusiness/Default.aspx?TabID=337'
-url_account: 'http://ygtcprod2.personifycloud.com/personifyebusiness/MyY/tabid/61/Default.aspx'
-url_sign_out: 'https://ygtcprod2.personifycloud.com/personifyebusiness/MyY/tabid/61/ctl/Logoff/Default.aspx'
-url_cart: 'http://ygtcprod2.personifycloud.com/PersonifyEbusiness/YMCA/ShoppingCart.aspx'
+url_login: 'https://***REMOVED***/PersonifyEBusiness/Default.aspx?TabID=337'
+url_account: 'https://***REMOVED***/PersonifyEbusiness/MyY/tabid/61/Default.aspx'
+url_sign_out: 'https://***REMOVED***/PersonifyEbusiness/MyY/tabid/61/ctl/Logoff/Default.aspx'
+url_cart: 'https://***REMOVED***/PersonifyEbusiness/YMCA/ShoppingCart.aspx'
 customer_orders_endpoint: 'http://ylayer.personifycloud.com/personifydataservices/personifydata.svc/CL_MindBodyCustomerOrder'
 customer_orders_username: FFWUSER
 customer_orders_password: ffwuser1
