[OYPD-357] Continue adding Session Instance entity, add OpenY Moderation wrapper.

--- a/openy.info.yml
+++ b/openy.info.yml
@@ -128,6 +128,8 @@ dependencies:
   - openy_hours_formatter
   - openy_migrate
   - openy_map
+  - openy_moderation_wrapper
+  - openy_session_instance
   - openy_socrates
   - location_finder
   - daxko
