--- a/composer.json
+++ b/composer.json
@@ -126,7 +126,7 @@
         "cweagans/composer-patches": "^1.5.0",
         "composer/installers": "^1.0",
         "drupal-composer/drupal-scaffold": "^2.0.0",
-        "drupal/core": "8.2.7",
+        "drupal/core": "^8.3.1",
         "drupal/features": "3.2",
         "drupal/confi": "1.3",
         "drupal/config_update": "1.3",
